--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,15 @@
     
     <string name="refresh">刷新</string>
     <string name="advise">改进</string>
+    
+    <string name="allow_background_sync">允许后台更新</string>
+    <string name="sync_interval">更新间隔</string>
+    <string name="wifi_only_title">只允许使用WIFI更新</string>
+    <string name="wifi_only_enabled_summ">不允许使用GPRS或者3G网络同步数据</string>
+    <string name="wifi_only_disabled_summ">允许使用任何网络同步数据</string>
+    
+    
+    <string name="sync_interval_3h">每3小时更新一次</string>
+    <string name="sync_interval_5h">每5小时更新一次</string>
+    <string name="sync_interval_24h">每天更新一次</string>
 </resources>
