--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="must_upgrade_text">您所使用的版本已经不再被支持，请使用最新版本！</string>
     
     <string name="image_quality">图片质量</string>
+    <string name="max_archives">文章数量</string>
 </resources>
