--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,8 +30,14 @@
     <string name="max_archives">文章数量</string>
     
     <string name="please_comment">宝贵意见</string>
-    <string name="help_us_do_best">您的意见将帮助我们做出最好的软件</string>
+    <string name="help_us_do_better">您的意见将帮助我们做的更好</string>
     
     <string name="comments">留言</string>
     <string name="about">关于</string>
+    
+    <string name="no_new_contents">已经是最新数据</string>
+    <string name="please_use_wifi">当前网络不是WIFI, 请使用WIFI连接</string>
+    <string name="no_network_available">没有网络链接</string>
+    <string name="download_error">下载数据内容失败，请检查网络</string>
+    
 </resources>
